// SPDX-License-Identifier: MIT
// Copyright (c) 2025 Sorcha Contributors

using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Logging;

namespace Sorcha.ServiceClients.Peer;

/// <summary>
/// gRPC client for Peer Service operations
/// </summary>
public class PeerServiceClient : IPeerServiceClient
{
    private readonly ILogger<PeerServiceClient> _logger;
    private readonly string _serviceAddress;

    public PeerServiceClient(
        IConfiguration configuration,
        ILogger<PeerServiceClient> logger)
    {
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));

        _serviceAddress = configuration["ServiceClients:PeerService:Address"]
            ?? configuration["GrpcClients:PeerService:Address"]
            ?? throw new InvalidOperationException("Peer Service address not configured");

        _logger.LogInformation("PeerServiceClient initialized (Address: {Address})", _serviceAddress);
    }

    public async Task<List<ValidatorInfo>> QueryValidatorsAsync(
        string registerId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Querying validators for register {RegisterId}", registerId);

            // TODO: Implement gRPC call to Peer Service
            _logger.LogWarning("Peer Service validator query not yet implemented - returning empty list");

            return await Task.FromResult(new List<ValidatorInfo>());
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to query validators for register {RegisterId}", registerId);
            return new List<ValidatorInfo>();
        }
    }

    public async Task PublishProposedDocketAsync(
        string registerId,
        string docketId,
        byte[] docketData,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Publishing proposed docket {DocketId} for register {RegisterId}",
                docketId, registerId);

            // TODO: Implement gRPC call to Peer Service
            _logger.LogWarning("Peer Service docket publishing not yet implemented");

            await Task.CompletedTask;
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to publish proposed docket {DocketId} for register {RegisterId}",
                docketId, registerId);
            throw;
        }
    }

    public async Task BroadcastConfirmedDocketAsync(
        string registerId,
        string docketId,
        byte[] docketData,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Broadcasting confirmed docket {DocketId} for register {RegisterId}",
                docketId, registerId);

            // TODO: Implement gRPC call to Peer Service
            _logger.LogWarning("Peer Service docket broadcasting not yet implemented");

            await Task.CompletedTask;
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to broadcast confirmed docket {DocketId} for register {RegisterId}",
                docketId, registerId);
            throw;
        }
    }

    public async Task ReportValidatorBehaviorAsync(
        string validatorId,
        string behavior,
        string details,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Reporting behavior '{Behavior}' for validator {ValidatorId}",
                behavior, validatorId);

            // TODO: Implement gRPC call to Peer Service
            _logger.LogWarning("Peer Service behavior reporting not yet implemented");

            await Task.CompletedTask;
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to report behavior for validator {ValidatorId}",
                validatorId);
            throw;
        }
    }
}
